extends Control





func _on_volume_pressed():
	pass # Replace with function body.


func _on_difficulty_pressed():
	pass # Replace with function body.


func _on_keybinds_pressed():
	pass # Replace with function body.


func _on_back_pressed():
	get_tree().change_scene_to_file("res://scenes/MainMenu.tscn")
